--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <div class="container">
     <h1>Coil Calculator</h1>
-    <label><input type="checkbox" id="acdc" style="width:auto; display:inline-block;"/> Use AC (uncheck for DC)</label>
+    <label><input type="checkbox" id="acdc" style="width:auto; display:inline-block;"/> (Set for DC, check for AC)</label>
     <label for="material">Wire Material:</label>
     <select id="material">
       <option value="1.68e-8">Copper</option>
